--- a/fl/h12.html
+++ b/fl/h12.html
@@ -191,7 +191,7 @@
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">序言</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">&nbsp;&nbsp;&nbsp;&nbsp;‎FZHS（以下简称“本款产品”）是基于<span lang="EN">Android</span>（安卓）系统、</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">IOS</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">iphone</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。‎FZHS由当涂顾芒网络科技有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。‎FZHS由湖北省之星童科技有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">非常感谢您对</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">‎FZHS</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的信任。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">‎FZHS</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">保证公司各产品（或服务）在使用您的个人信息的时候遵循“四不三必须”的七个规范，即：<span lang="EN"><br>
@@ -486,8 +486,8 @@
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">十、如何联系我们</span></b></p>
     <p class="MsoNormal">
         如果您对我们的隐私政策及对您个人信息的处理有任何疑问、意见、建议或投诉，请通过以下方式与我们联系：<br>
-        公司名称：当涂顾芒网络科技有限公司<br>
-		办公地址：安徽省马鞍山市当涂县石桥镇中心街11号<br>
+        公司名称：湖北省之星童科技有限公司<br>
+		办公地址：湖北省武汉市东西湖区湖北省武汉市东西湖区将军路街办事处车场南路9号新建居住、商业、轨道交通项目(常青车辆段上盖物业)二期C区C6号楼-办公楼/单元22层22办公号-A1-217号<br>
         联系邮箱：zhongjin4568@163.com<br>
 		联系人：李中军<br>
 		联系电话：17565586537<br>
