--- a/fl/h31.html
+++ b/fl/h31.html
@@ -478,7 +478,7 @@
     <p class="MsoNormal">
         如果您对我们的隐私政策及对您个人信息的处理有任何疑问、意见、建议或投诉，请通过以下方式与我们联系：<br>
         公司名称：湖北省宝苗科技有限公司<br>
-        办公地址：湖北省武汉市东西湖区五环时尚广场4号楼单元9层08号FF1-82号<br>
+        办公地址：湖北省武汉市东西湖区五环时尚广场4号楼单元9层08号-B1-69号<br>
         联系邮箱：zyoupeibao1@163.com<br>
         联系人：李中绘<br>
         联系电话：18565586537<br>
