--- a/fl/h27.html
+++ b/fl/h27.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     
-    <title>乐动体育隐私政策</title>
+    <title>江南体育隐私政策</title>
     <style>
         <!--
         /* Font Definitions */
@@ -182,7 +182,7 @@
 <div class="WordSection1" style="layout-grid:15.6pt">
 
     <!--<h1><span-->
-            <!--style='font-size:15.0pt;font-family:"微软雅黑","sans-serif"'>乐动体育隐私政策</span></h1>-->
+            <!--style='font-size:15.0pt;font-family:"微软雅黑","sans-serif"'>江南体育隐私政策</span></h1>-->
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2024年10月20日</span></b></p>
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2024年10月20日</span></b></p>
     <br>
@@ -190,10 +190,10 @@
 
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">序言</span></b></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">&nbsp;&nbsp;&nbsp;&nbsp;乐动体育（以下简称“本款产品”）是基于<span lang="EN">Android</span>（安卓）系统、</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">IOS</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">iphone</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。乐动体育由陕西景时飞腾信息技术有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">&nbsp;&nbsp;&nbsp;&nbsp;江南体育（以下简称“本款产品”）是基于<span lang="EN">Android</span>（安卓）系统、</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">IOS</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">iphone</span><span style="font-family:
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。江南体育由陕西景时飞腾信息技术有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">非常感谢您对</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的信任。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">非常感谢您对</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的信任。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">保证公司各产品（或服务）在使用您的个人信息的时候遵循“四不三必须”的七个规范，即：<span lang="EN"><br>
 </span>一、不该看的不看<span lang="EN"><br>
 </span>二、不该传的不传<span lang="EN"><br>
@@ -224,25 +224,25 @@
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">二、我们如何收集和使用您的个人信息</span></b></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您在使用乐动体育时，我们需要<span lang="EN">/</span>可能需要收集和使用您的一些个人信息，我们收集和使用的您的个人信息类型包括两种：<b>第一种：乐动体育产品与<span lang="EN">/</span>或服务的核心业务功能所必需的信息：此类信息为产品与<span lang="EN">/</span>或服务正常运行的必备信息，您须授权我们收集。如您拒绝提供，您将无法正常使用我们的产品或服务；第二种：附加业务功能可能需要收集的信息：此信息为非核心业务功能所需的信息，您可以选择是否授权我们收集。如您拒绝提供，将导致附加业务功能无法实现或无法达到我们拟达到的效果，但不影响您对核心业务功能的正常使用。</b></span></p>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您在使用江南体育时，我们需要<span lang="EN">/</span>可能需要收集和使用您的一些个人信息，我们收集和使用的您的个人信息类型包括两种：<b>第一种：江南体育产品与<span lang="EN">/</span>或服务的核心业务功能所必需的信息：此类信息为产品与<span lang="EN">/</span>或服务正常运行的必备信息，您须授权我们收集。如您拒绝提供，您将无法正常使用我们的产品或服务；第二种：附加业务功能可能需要收集的信息：此信息为非核心业务功能所需的信息，您可以选择是否授权我们收集。如您拒绝提供，将导致附加业务功能无法实现或无法达到我们拟达到的效果，但不影响您对核心业务功能的正常使用。</b></span></p>
 
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）过滤无法使用的软件功能</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了过滤您手机无法使用的软件，乐动体育会收集您<b>手机的系统版本号、屏幕分辨率、运行内存、剩余存储空间信息，</b>并依据这些信息排除您手机无法使用的软件，以保证您在乐动体育下载的软件都可安装使用。</span></p>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了过滤您手机无法使用的软件，江南体育会收集您<b>手机的系统版本号、屏幕分辨率、运行内存、剩余存储空间信息，</b>并依据这些信息排除您手机无法使用的软件，以保证您在江南体育下载的软件都可安装使用。</span></p>
 
 	   <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）传感器列表权限</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">实时计步的功能，我们需要<span lang="EN">/</span>获取传感器列表<b></b></span><b><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育计步功能</span><span style="font-family:
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">实时计步的功能，我们需要<span lang="EN">/</span>获取传感器列表<b></b></span><b><span style="font-family:
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育计步功能</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">此功能不会获取用户信息。</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
     <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）复制和粘贴版权限</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">复制颜色的功能，我们需要<span lang="EN">/</span>使用复制功能<b></b></span><b><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">和</span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">粘贴板功能，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">复制颜色的功能，我们需要<span lang="EN">/</span>使用复制功能<b></b></span><b><span style="font-family:
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">和</span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">粘贴板功能，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">此功能不会获取用户信息。</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
@@ -254,11 +254,11 @@
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（五</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为提高您使用我们及我们关联公司、合作伙伴提供服务的安全性，保护您或其他用户或公众的人身财产安全免遭侵害，更好地预防钓鱼网站、欺诈、网络漏洞、计算机病毒、网络攻击、网络侵入等安全风险，更准确地识别违反法律法规或</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">相关协议规则的情况。<b>我们可能使用或整合您的账户信息、设备信息、软件使用信息以及我们关联公司、合作伙伴取得您授权或依据法律共享的信息，</b>用于进行身份验证、检测及防范安全事件，并依法采取必要的记录、审计、分析、处置措施。</span></p>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为提高您使用我们及我们关联公司、合作伙伴提供服务的安全性，保护您或其他用户或公众的人身财产安全免遭侵害，更好地预防钓鱼网站、欺诈、网络漏洞、计算机病毒、网络攻击、网络侵入等安全风险，更准确地识别违反法律法规或</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">相关协议规则的情况。<b>我们可能使用或整合您的账户信息、设备信息、软件使用信息以及我们关联公司、合作伙伴取得您授权或依据法律共享的信息，</b>用于进行身份验证、检测及防范安全事件，并依法采取必要的记录、审计、分析、处置措施。</span></p>
 
        <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（六</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）其他</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">如上文所述，<b>如果某一需要收集您的个人信息的功能或产品<span lang="EN">/</span>服务未能在本《乐动体育隐私政策》中予以说明的，或者我们超出了与收集您的个人信息时所声称的目的及具有直接或合理关联范围的，我们将在收集和使用你的个人信息前，通过更新本《乐动体育隐私政策》、页面提示、弹窗、消息通知、网站公告或其他便于您获知的方式另行向您说明，并为您提供自主选择同意的方式，且在征得您明示同意后收集和使用。</b></span></p>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">如上文所述，<b>如果某一需要收集您的个人信息的功能或产品<span lang="EN">/</span>服务未能在本《江南体育隐私政策》中予以说明的，或者我们超出了与收集您的个人信息时所声称的目的及具有直接或合理关联范围的，我们将在收集和使用你的个人信息前，通过更新本《江南体育隐私政策》、页面提示、弹窗、消息通知、网站公告或其他便于您获知的方式另行向您说明，并为您提供自主选择同意的方式，且在征得您明示同意后收集和使用。</b></span></p>
 
     <p class="MsoNormal"><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">征得授权同意的例外。</span></b><span lang="EN" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"><br>
 </span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">根据相关法律法规规定，以下情形中收集您的个人信息无需征得您的授权同意：<span lang="EN"><br>
@@ -319,12 +319,12 @@
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">六、您管理个人信息的权利</span></b></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">在您使用乐动体育期间，您可以通过以下方式访问并管理您的个人信息：</span></p>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">在您使用江南体育期间，您可以通过以下方式访问并管理您的个人信息：</span></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）访问和更正您的个人信息</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以通过</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">登录 </span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">用户中心查询和更正您的</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育</span><span style="font-family:
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以通过</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">登录 </span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">用户中心查询和更正您的</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">账户信息以及您提供的信息，包括密码等信息。</span></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）删除您的个人信息</span></p>
@@ -338,12 +338,12 @@
 
    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">七、未成年人个人信息保护</span></b></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">未成年人使用我们的产品与<span lang="EN">/</span>或服务之前应首先取得其监护人的同意。如您为未成年人，在使用我们的产品与<span lang="EN">/</span>或服务前，应在监护人监护、指导下共同阅读本《乐动体育隐私政策》，且应在监护人明确同意和指导下使用我们的产品与<span lang="EN">/</span>或服务、提交个人信息。我们根据国家相关法律法规的规定保护未成年人的个人信息，只会在法律法规允许、监护人明确同意或保护您的权益所必要的情况下收集、使用或公开披露未成年人的个人信息；若您是未成年人的监护人，当您对您所监护的未成年人的个人信息有相关疑问时，请通过“如何联系我们”章节中的联系方式与我们联系。如果我们发现在未事先获得可证实的监护人同意的情况下收集了未成年人的个人信息，则会设法尽快删除相关数据。
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">未成年人使用我们的产品与<span lang="EN">/</span>或服务之前应首先取得其监护人的同意。如您为未成年人，在使用我们的产品与<span lang="EN">/</span>或服务前，应在监护人监护、指导下共同阅读本《江南体育隐私政策》，且应在监护人明确同意和指导下使用我们的产品与<span lang="EN">/</span>或服务、提交个人信息。我们根据国家相关法律法规的规定保护未成年人的个人信息，只会在法律法规允许、监护人明确同意或保护您的权益所必要的情况下收集、使用或公开披露未成年人的个人信息；若您是未成年人的监护人，当您对您所监护的未成年人的个人信息有相关疑问时，请通过“如何联系我们”章节中的联系方式与我们联系。如果我们发现在未事先获得可证实的监护人同意的情况下收集了未成年人的个人信息，则会设法尽快删除相关数据。
 </span></p>
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">八、隐私政策的适用范围</span></b></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">本隐私政策仅适用于乐动体育。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的其他产品和服务将使用相关产品或服务的隐私政策。特别需要说明的是，本隐私政策不适用以下情况：<span lang="EN"><br>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">本隐私政策仅适用于江南体育。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的其他产品和服务将使用相关产品或服务的隐私政策。特别需要说明的是，本隐私政策不适用以下情况：<span lang="EN"><br>
 1. </span>将</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司产品</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（或服务）嵌入到第三方产品（或服务），第三方产品（或服务）收集的信息。<span lang="EN"><br>
 2. </span>在</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司产品</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（或服务）中接入的第三方服务、广告或其他公司、组织或个人所收集的信息。</span></p>
 
@@ -355,7 +355,7 @@
         style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">SDK</span><span
         style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;t">服务列表及其隐私政策链接明细表</span></p>
     <p style="margin:0pt; orphans:0; text-align:justify; widows:0"><span
-        style="font-family:宋体; font-size:10.5pt">为保障</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">乐动体育App
+        style="font-family:宋体; font-size:10.5pt">为保障</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">江南体育App
       </span><span style="font-family:宋体; font-size:10.5pt">的稳定运行或实现相关功能，我们可能会接入由第三方提供的软件开发包（</span><span
         style="font-family:Calibri; font-size:10.5pt">SDK</span><span
         style="font-family:宋体; font-size:10.5pt">）实现前述目的。我们会进到审慎义务，对合作方获取信息的软件工具开发包（</span><span
@@ -371,7 +371,7 @@
         style="font-family:宋体; font-size:10.5pt">的最新情况。目前</span><span
         style="font-family:Calibri; font-size:10.5pt"></span><span
         style="font-family:宋体; font-size:10.5pt"></span><span
-        style="font-family:Calibri; font-size:10.5pt">乐动体育App</span><span
+        style="font-family:Calibri; font-size:10.5pt">江南体育App</span><span
         style="font-family:宋体; font-size:10.5pt">接入的第三方</span><span
         style="font-family:Calibri; font-size:10.5pt">SDK</span><span
         style="font-family:宋体; font-size:10.5pt">列明如下：</span></p>
@@ -473,9 +473,9 @@
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">九、隐私政策的变更和修订</span></b></p>
 
-    <p class="MsoNormal"><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们鼓励您在每次使用我们的产品或服务时都查阅我们的《乐动体育隐私政策》。</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了给您提供更好的服务，我们会根据产品的更新情况及法律法规的相关要求更新本《乐动体育隐私政策》的条款，该类更新构成本《乐动体育隐私政策》的一部分。未经您明确同意，我们不会限制您按照本隐私政策所应享有的权利。</span></p>
+    <p class="MsoNormal"><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们鼓励您在每次使用我们的产品或服务时都查阅我们的《江南体育隐私政策》。</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了给您提供更好的服务，我们会根据产品的更新情况及法律法规的相关要求更新本《江南体育隐私政策》的条款，该类更新构成本《江南体育隐私政策》的一部分。未经您明确同意，我们不会限制您按照本隐私政策所应享有的权利。</span></p>
 
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">对于本隐私政策的重大变更，我们还会提供显著的通知（例如，在软件改版或升级、或您重新登录时，以弹窗形式对您进行及时通知）。若您继续使用我们的服务，即表示您充分阅读、理解并同意受经修订的《乐动体育隐私政策》的约束。为保障您的合法权益，我们建议您可以定期在我们平台的“设置<span lang="EN">-</span>用户隐私政策”中查看本政策。<span lang="EN"><br>
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">对于本隐私政策的重大变更，我们还会提供显著的通知（例如，在软件改版或升级、或您重新登录时，以弹窗形式对您进行及时通知）。若您继续使用我们的服务，即表示您充分阅读、理解并同意受经修订的《江南体育隐私政策》的约束。为保障您的合法权益，我们建议您可以定期在我们平台的“设置<span lang="EN">-</span>用户隐私政策”中查看本政策。<span lang="EN"><br>
 </span>本政策所指的重大变更包括但不限于：<span lang="EN"><br>
 1. </span>我们的服务模式发生重大变化。如处理个人信息的目的、处理的个人信息类型、个人信息的使用方式等；<span lang="EN"><br>
 2. </span>我们在控制权等方面发生重大变化。如并购重组等引起的所有者变更等；<span lang="EN"><br>
