--- a/fl/h43.html
+++ b/fl/h43.html
@@ -191,7 +191,7 @@
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">序言</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">&nbsp;&nbsp;&nbsp;&nbsp;世俱杯（以下简称“本款产品”）是基于<span lang="EN">Android</span>（安卓）系统、</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">IOS</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">iphone</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。世俱杯由三亚豹绘商贸有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。世俱杯由哈尔滨乔白准召科技有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">非常感谢您对</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">世俱杯</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的信任。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">世俱杯</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">保证公司各产品（或服务）在使用您的个人信息的时候遵循“四不三必须”的七个规范，即：<span lang="EN"><br>
@@ -506,8 +506,8 @@
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">十、如何联系我们</span></b></p>
     <p class="MsoNormal">
         如果您对我们的隐私政策及对您个人信息的处理有任何疑问、意见、建议或投诉，请通过以下方式与我们联系：<br>
-        公司名称：三亚豹绘商贸有限公司<br>
-        办公地址：海南省三亚市海棠区海南省三亚市海棠区海棠林旺一巷11号803房<br>
+        公司名称：哈尔滨乔白准召科技有限公司<br>
+        办公地址：黑龙江省哈尔滨市南岗区黑龙江省哈尔滨市南岗区哈尔滨大街640号金爵万象1号楼1245室<br>
         联系邮箱：zhongjin4568@163.com<br>
         联系人：李中军<br>
         联系电话：17565586537<br>
