--- a/fl/h45.html
+++ b/fl/h45.html
@@ -191,7 +191,7 @@
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">序言</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">&nbsp;&nbsp;&nbsp;&nbsp;路人王官方体育资讯（以下简称“本款产品”）是基于<span lang="EN">Android</span>（安卓）系统、</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">IOS</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">iphone</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。路人王官方体育资讯由成都丛甘焦科技有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）等设备（以下简称“手机”）的管理及手机内容资源下载工具，包含手机软件的浏览和下载。路人王官方体育资讯由北京荷航科技有限公司（以下简称“</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">”）提供。</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">非常感谢您对</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">路人王官方体育资讯</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的信任。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">路人王官方体育资讯</span><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">保证公司各产品（或服务）在使用您的个人信息的时候遵循“四不三必须”的七个规范，即：<span lang="EN"><br>
@@ -506,8 +506,8 @@
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">十、如何联系我们</span></b></p>
     <p class="MsoNormal">
         如果您对我们的隐私政策及对您个人信息的处理有任何疑问、意见、建议或投诉，请通过以下方式与我们联系：<br>
-        公司名称：成都丛甘焦科技有限公司<br>
-        办公地址：四川省成都市金牛区四川省成都市金牛区韦家碾三路305号附1-33号<br>
+        公司名称：北京荷航科技有限公司<br>
+        办公地址：北京市市辖区昌平区北京市昌平区中东路5号院5号12层1209<br>
         联系邮箱：zyoupeibao1@163.com<br>
         联系人：李中绘<br>
         联系电话：18565586537<br>
