--- a/fl/h69.html
+++ b/fl/h69.html
@@ -267,6 +267,8 @@
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（六）改善我们的产品和服务</span></p>
 
+<p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过极光推送 - JPush SDK收集<b>经过<span lang="EN">MD5</span>算法加密的设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。为开发者赋予消息和通知的推送能力，实现向您的终端用户进行消息推送</span></p>
+
     <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过友盟SDK收集<b>经过<span lang="EN">MD5</span>算法加密的国际移动设备身份码（<span lang="EN">IMEI</span>），以及手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、软件使用时间和频率、软件崩溃日志</b>用于统计我们产品的用户数量、分析产品的使用状况、排查崩溃原因、减少崩溃情况，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、设备型号及系统版本、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（七</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
@@ -427,6 +429,69 @@
                 </p>
             </td>
         </tr>
+
+ <tr>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">极光推送 - JPush SDK</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">为 APP 用户提供信息推送服务，</span><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">为开发者赋予消息和通知的推送能力，实现向您的终端用户进行消息推送</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">深圳市和讯华谷信息技术有限公司</span>
+                </p>
+            </td>
+        </tr>
+
+ <tr>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">极光安全认证</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">用于完成一键登录和号码认证，识别您终端用户的风险；
+设备标识符（包括IMEI、IDFA、Android ID、GAID、MAC、OAID、IMSI、MEID、UAID、ICCID）：用于生成脱敏的终端用户设备唯一标识，防范用户账号安全风险；
+网络信息（包括网络类型、运营商名称、基站信息、IP地址、WiFi信息、SSID、BSSID）：用于判断用户是否连接了移动网络，锁定使用服务手机号，获取当前上网卡的预取号以及token信息，从而实现在移动网络状态下的一键登录服务；</span><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none"></span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">用于给相应号码发送短信验证码,实现短信验证功能；同时，用于分析当前设备的风险等级，可有效识别作弊行为，剔除作弊设备，识别恶意刷量、恶意程序、保护用户账号安全等。
+设备硬件信息（包括设备型号、设备屏幕分辨率、设备硬件制造商、设备产品名称）：用于确保所提供的产品和/或服务在不同设备上的兼容性，检测黑产恶意伪造设备；
+操作系统信息（包括操作系统版本、系统名称、系统语言）：用于确保所提供的产品和/或服务在不同设备上的兼容性；
+精确位置信息：用于按照地域提供登录报表，校准数据的地区分布；识别设备异常等团伙攻击/识别地理位置伪造，保护用户账号安全等；
+软件列表信息（包括软件列表及软件运行列表信息）：用于识别用户应用环境及判断已安装的APP信息，帮助您识别异常软件与拦截机器程序的批量自动化操作，保护用户账号安全等。</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">深圳市和讯华谷信息技术有限公司</span>
+                </p>
+            </td>
+        </tr>
+
 
  <tr>
             <td
