--- a/fl/h69.html
+++ b/fl/h69.html
@@ -218,6 +218,7 @@
     <p class="MsoNormal"><span lang="EN" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">1. </span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">个人信息：指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。<span lang="EN"><br>
 <b>2. </b></span><b>个人敏感信息：指包括身份证件号码、个人生物识别信息、银行账号、财产信息、行踪轨迹、交易信息、<span lang="EN">14</span>岁以下（含）儿童信息等的个人信息（我们将在本隐私权政策中对个人敏感信息以粗体进行显著标识）。<span lang="EN"><br>
 </span></b><span lang="EN">3. </span>个人信息删除：指在实现日常业务功能所涉及的系统中去除个人信息的行为，使其保持不可被检索、访问的状态。</span></p>
+<span lang="EN"  style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">4.自启动说明： </span>为保证消息及时推送等核心功能，应用可能在以下场景申请自启动权限：系统事件触发（如开机启动），定时任务执行（如消息同步），我们承诺仅在用户明确同意后才会启用相关功能</span></p>
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">二、我们如何收集和使用您的个人信息</span></b></p>
 
@@ -225,13 +226,22 @@
 
     <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过个推SDK收集手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、用于提供消息推送服务，确保您能及时收到聊天消息、语音通话和视频通话的通知，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、设备型号及系统版本、IMEI、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
 
+<section class="autostart-section">
+    <h3 style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）自启动说明</h3>
+    <p>为保证消息及时推送等核心功能，应用可能在以下场景申请自启动权限：</p>
+    <ul>
+        <li>系统事件触发（如开机启动）</li>
+        <li>定时任务执行（如消息同步）</li>
+    </ul>
+    <p>我们承诺仅在用户明确同意后才会启用相关功能</p>
+</section>
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）过滤无法使用的软件功能</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）过滤无法使用的软件功能</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了过滤您手机无法使用的软件，讯响会收集您<b>手机的系统版本号、屏幕分辨率、运行内存、剩余存储空间信息，</b>并依据这些信息排除您手机无法使用的软件，以保证您在讯响下载的软件都可安装使用。</span></p>
 
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）拍照和相册权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）拍照和相册权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">扫码和更换头像功能，我们需要<span lang="EN">/</span>获取相机权限和相册权限<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">申请权限是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响默认扫码和更换头像功能</span><span style="font-family:
@@ -240,7 +250,7 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）传感器列表权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（四）传感器列表权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">实时计步的功能，我们需要<span lang="EN">/</span>获取传感器列表<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响计步功能</span><span style="font-family:
@@ -248,7 +258,7 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（四）复制和粘贴版权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（五）复制和粘贴版权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">复制颜色的功能，我们需要<span lang="EN">/</span>使用复制功能<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">和</span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">粘贴板功能，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:
@@ -256,7 +266,7 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（五）录音权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（六）录音权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">语音的功能，我们需要<span lang="EN">/</span>使用录音功能<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">和</span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">粘贴板功能，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:
@@ -265,24 +275,24 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（六）改善我们的产品和服务</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（七）改善我们的产品和服务</span></p>
 
 <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过极光推送 - JPush SDK收集<b>经过<span lang="EN">MD5</span>算法加密的设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。为开发者赋予消息和通知的推送能力，实现向您的终端用户进行消息推送</span></p>
 
     <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过友盟SDK收集<b>经过<span lang="EN">MD5</span>算法加密的国际移动设备身份码（<span lang="EN">IMEI</span>），以及手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、软件使用时间和频率、软件崩溃日志</b>用于统计我们产品的用户数量、分析产品的使用状况、排查崩溃原因、减少崩溃情况，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、设备型号及系统版本、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（七</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（八</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为提高您使用我们及我们关联公司、合作伙伴提供服务的安全性，保护您或其他用户或公众的人身财产安全免遭侵害，更好地预防钓鱼网站、欺诈、网络漏洞、计算机病毒、网络攻击、网络侵入等安全风险，更准确地识别违反法律法规或</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">讯响</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">相关协议规则的情况。<b>我们可能使用或整合您的账户信息、设备信息、软件使用信息以及我们关联公司、合作伙伴取得您授权或依据法律共享的信息，</b>用于进行身份验证、检测及防范安全事件，并依法采取必要的记录、审计、分析、处置措施。</span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（八）账号注销</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（九）账号注销</span></p>
 
     <p class="MsoNormal"><b><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以在APP内进行账号注销操作，操作流程大致如下：我的-->删除账号-->确认删除， 首先进入我的页面，点击删除账号，在弹出框点击确认删除，系统会将您的账号注销掉， 也可以通过邮箱联系我们将账号删除，我们将在十五个工作日内完成您的账号注销操作。</span></b></p>
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以在APP内进行账号注销操作，操作流程大致如下：我的-->设置-->删除账号-->确认删除， 首先进入设置页面，点击删除账号，在弹出框点击确认删除，系统会将您的账号注销掉， 也可以通过邮箱联系我们将账号删除，我们将在十五个工作日内完成您的账号注销操作。</span></b></p>
 
 
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（九</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）其他</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（十</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）其他</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">如上文所述，<b>如果某一需要收集您的个人信息的功能或产品<span lang="EN">/</span>服务未能在本《讯响隐私政策》中予以说明的，或者我们超出了与收集您的个人信息时所声称的目的及具有直接或合理关联范围的，我们将在收集和使用你的个人信息前，通过更新本《讯响隐私政策》、页面提示、弹窗、消息通知、网站公告或其他便于您获知的方式另行向您说明，并为您提供自主选择同意的方式，且在征得您明示同意后收集和使用。</b></span></p>
 
