--- a/fl/h69.html
+++ b/fl/h69.html
@@ -224,7 +224,7 @@
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您在使用讯响时，我们需要<span lang="EN">/</span>可能需要收集和使用您的一些个人信息，我们收集和使用的您的个人信息类型包括两种：<b>第一种：讯响产品与<span lang="EN">/</span>或服务的核心业务功能所必需的信息：此类信息为产品与<span lang="EN">/</span>或服务正常运行的必备信息，您须授权我们收集。如您拒绝提供，您将无法正常使用我们的产品或服务；第二种：附加业务功能可能需要收集的信息：此信息为非核心业务功能所需的信息，您可以选择是否授权我们收集。如您拒绝提供，将导致附加业务功能无法实现或无法达到我们拟达到的效果，但不影响您对核心业务功能的正常使用。</b></span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过个推SDK收集手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、用于提供消息推送服务，确保您能及时收到聊天消息、语音通话和视频通话的通知，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、设备型号及系统版本、IMEI、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
+    <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过个推SDK收集手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、用于提供消息推送服务，确保您能及时收到聊天消息、语音通话和视频通话的通知，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、设备型号及系统版本、IMEI、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，硬件序列号，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
 
 <section class="autostart-section">
     <h3 style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）自启动说明</h3>
@@ -277,9 +277,9 @@
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（七）改善我们的产品和服务</span></p>
 
-<p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过极光推送 - JPush SDK收集<b>经过<span lang="EN">MD5</span>算法加密的设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。为开发者赋予消息和通知的推送能力，实现向您的终端用户进行消息推送</span></p>
+<p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过极光推送 - JPush SDK收集<b>经过<span lang="EN">MD5</span>算法加密的设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、硬件序列号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。为开发者赋予消息和通知的推送能力，实现向您的终端用户进行消息推送</span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过友盟SDK收集<b>经过<span lang="EN">MD5</span>算法加密的国际移动设备身份码（<span lang="EN">IMEI</span>），以及手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、软件使用时间和频率、软件崩溃日志</b>用于统计我们产品的用户数量、分析产品的使用状况、排查崩溃原因、减少崩溃情况，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、设备型号及系统版本、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
+    <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过友盟SDK收集<b>经过<span lang="EN">MD5</span>算法加密的国际移动设备身份码（<span lang="EN">IMEI</span>），以及手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、软件使用时间和频率、软件崩溃日志</b>用于统计我们产品的用户数量、分析产品的使用状况、排查崩溃原因、减少崩溃情况，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。通过个推SDK收集设备平台、设备厂商、设备品牌、硬件序列号、设备型号及系统版本、OAID、AndroidID、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID），以此保证消息推送的准确下发和消息设备的准确识别。这些信息不涉及到您的个人身份等隐私信息。</span></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（八</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
 
@@ -457,7 +457,7 @@
             <td
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
                 <p style="margin:0pt; text-align:center"><span
-                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。</span>
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">设备标识符（包括AndroidID、GAID、OAID、UAID、IDFA、AAID）、设备硬件信息（包括设备型号、硬件序列号、设备屏幕分辨率、设备硬件制造商、设备产品名称、设备存储空间）、操作系统信息（包括操作系统版本、系统名称、系统语言）、网络信息（包括网络类型、运营商信息、IP地址、WIFI状态信息）、推送信息日志、设备标识符（包括IMEI、MAC、IMSI）、网络信息（包括SSID、BSSID、WiFi列表信息、基站信息）、软件列表信息（包括软件列表及软件运行列表信息）、位置相关信息。</span>
                 </p>
             </td>
             <td
@@ -479,7 +479,7 @@
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
                 <p style="margin:0pt"><span
                         style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">用于完成一键登录和号码认证，识别您终端用户的风险；
-设备标识符（包括IMEI、IDFA、Android ID、GAID、MAC、OAID、IMSI、MEID、UAID、ICCID）：用于生成脱敏的终端用户设备唯一标识，防范用户账号安全风险；
+设备标识符（包括IMEI、IDFA、Android ID、GAID、MAC、OAID、IMSI、MEID、UAID、ICCID）、硬件序列号：用于生成脱敏的终端用户设备唯一标识，防范用户账号安全风险；
 网络信息（包括网络类型、运营商名称、基站信息、IP地址、WiFi信息、SSID、BSSID）：用于判断用户是否连接了移动网络，锁定使用服务手机号，获取当前上网卡的预取号以及token信息，从而实现在移动网络状态下的一键登录服务；</span><span
                         style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none"></span>
                 </p>
@@ -520,7 +520,7 @@
             <td
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
                 <p style="margin:0pt; text-align:center"><span
-                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">获取设备标识符（如IMEI、IDFA、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID、Android ID、MAC、OAID等）、应用安装列表、网络状态、手机型号、操作系统版本等设备信息</span>
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">获取设备标识符（如IMEI、IDFA、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID、Android ID、MAC、OAID等）、硬件序列号、应用安装列表、网络状态、手机型号、操作系统版本等设备信息</span>
                 </p>
             </td>
             <td
@@ -548,7 +548,7 @@
             <td
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
                 <p style="margin:0pt; text-align:center"><span
-                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">涉及个人信息：IMEI、OAID、Android ID、GAID/AAID、网络信息， 第三方隐私政策链接：https://dev.vivo.com.cn/documentCenter/doc/652</span>
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">涉及个人信息：IMEI、OAID、Android ID、GAID/AAID、硬件序列号、网络信息， 第三方隐私政策链接：https://dev.vivo.com.cn/documentCenter/doc/652</span>
                 </p>
             </td>
             <td
@@ -604,7 +604,7 @@
             <td
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
                 <p style="margin:0pt; text-align:center"><span
-                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">获取Android_ID、个人常用设备信息、个人位置信息、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID）</span>
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">获取Android_ID、硬件序列号、个人常用设备信息、个人位置信息、WIFI连接信息、运营商信息、DHCP、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID，主要用于生成唯一的推送目标ID（CID）和设备ID（GID）</span>
                 </p>
             </td>
             <td
